@@ -1,5 +1,6 @@
 CONFIG_CONSOLE_DIRECT=y
 CONFIG_CONSOLE_BIOS=n
+CONFIG_CONSOLE_SERIAL=n
 CONFIG_DCON_VT52=y
 CONFIG_DCON_ANSI=y
 CONFIG_DCON_ANSI_PRINTK=n
